--- a/assets/css/modules/_values.sass
+++ b/assets/css/modules/_values.sass
@@ -16,7 +16,7 @@ section.values
     content: ""
     background: linear-gradient(to left bottom, white 50%, $color-blue 50.5%)
   .value-container
-    max-width: 620px
+    width: 620px
     margin: 25px auto 0 auto
     display: flex
     justify-content: space-between
